2008-05-19  Nick Dokos <nicholas.dokos@hp.com>  (tiny change)

	* mh-search.el (mh-mairix-regexp-builder): Add additional items to
	search string to support org-mode (closes SF #1965704).

2008-03-18  Bill Wohler  <wohler@newt.com>

	* mh-e.el (mh-invisible-header-fields-internal): Add Accreditor,
	Seal-Send-Time. 
	(mh-invisible-header-fields, mh-invisible-header-fields-default):
	Update URL to bug report for users to report ignored fields.

2008-03-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mh-xface.el (mh-uncompface, mh-picon-file-contents):
	Use set-buffer-multibyte...
	(mh-face-display-function, mh-x-image-display): ...rather than bind
	default-enable-multibyte-characters.

2008-02-24  Bill Wohler  <wohler@newt.com>

	* mh-comp.el (mh-send-letter): Call split-string on mh-send-args
	when sending synchronously too.

2008-02-19  Bill Wohler  <wohler@newt.com>

	* mh-comp.el (mh-annotate-msg):
	* mh-e.el (mh-invisible-header-fields-internal): Remove trailing
	whitespace.

2008-01-30  Bill Wohler  <wohler@newt.com>

	* mh-mime.el (mh-mml-to-mime): Don't look up sender if From
	absent. Fixes "Wrong type argument: stringp, nil" error.

2007-12-02  Glenn Morris  <rgm@gnu.org>

	* mh-mime.el (mail-strip-quoted-names): Autoload it.

2007-11-17  Dan Nicolaescu  <dann@ics.uci.edu>

	* mh-e.el (mh-xemacs-flag): Remove.
	(mh-min-colors-defined-flag):
	* mh-xface.el (mh-show-xface-function):
	* mh-utils.el (mh-colors-available-p):
	* mh-show.el (mh-show-mode):
	* mh-gnus.el (mh-gnus-local-map-property):
	* mh-folder.el (mh-folder-mode-map)
	(mh-remove-xemacs-horizontal-scrollbar, mh-folder-mode):
	* mh-comp.el (mh-insert-x-mailer): Replace uses of mh-xemacs-flag
	with (featurep 'xemacs).

2007-09-11  Bill Wohler  <wohler@newt.com>

	* mh-e.el (Version, mh-version): Add +cvs to version.

2007-08-25  Stephen Gildea  <gildea@stop.mail-abuse.org>

	* mh-e.el (mh-annotate-msg-hook): New variable.

	* mh-comp.el (mh-annotate-msg): Call new mh-annotate-msg-hook.